Adjust index page stylesheet

--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     
   </title>
 
-  <link type="text/css" rel="stylesheet" href="/assets/application.css">
+  <link type="text/css" rel="stylesheet" href="/assets/application-460a0e66852f88f48717d8bbebebd3f417023e1be6693fb665a9f1d410843dc4.css">
 
 	<!-- RSS -->
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
@@ -48,8 +48,8 @@
 
       <header id="header">
 	<a href="/">
-    <img src="/assets/conan.jpg" width="200" height="200" alt="conan.jpg">
-    <h3>Reyes Yang</h3>
+    <img src="/assets/conan-382cd5216f5adfdabb4b8d78b112daab7ca8937bf0cdd94b524a7167de64ece8.jpg" width="200" height="200" alt="conan.jpg">
+		<h1>Just Do IT!</h1>
 	</a>
 </header>
 
@@ -86,7 +86,7 @@
 
     </div>
 
-    <script type="text/javascript" src="/assets/application.js"></script>
+    <script type="text/javascript" src="/assets/application-ce159705a6099cbf06088763480093b89beb517e8f7e9c1e678de11969458dda.js"></script>
 
   </body>
 </html>
