--- a/about/index.html
+++ b/about/index.html
@@ -12,7 +12,7 @@
     
   </title>
 
-  <link type="text/css" rel="stylesheet" href="/assets/application-7b4a47f1e705dc9e89f6d32efba9b1bec942d90cddd96a8f16852a25da1c5c21.css">
+  <link type="text/css" rel="stylesheet" href="/assets/application-41fad5a9444ec69283765213bd3be1ea2ae7dfb91096b26533f09532bfd3a479.css">
 
 	<!-- RSS -->
 	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" />
@@ -49,8 +49,16 @@
       <header id="header">
 	<a href="/">
     <img src="/assets/conan-382cd5216f5adfdabb4b8d78b112daab7ca8937bf0cdd94b524a7167de64ece8.jpg" width="200" height="200" alt="conan.jpg">
-		<h1>Just Do IT!</h1>
 	</a>
+	<h1>关于</h1>
+
+	<div>
+		<a class="author" href="/about">海龙</a> 道听途说
+
+		
+	</div>
+
+	
 </header>
 
 
